# voxel-io

./: .gitignore  CMakeLists.txt  README.md  build.hpp  builtin.cpp  color.hpp  constants.cpp  format.sh  image.cpp  image.hpp  log.cpp  log.hpp  palette.cpp  palette.hpp  parse.hpp  sstreamwrap.cpp  stringify.cpp  stringify.hpp  stringmanip.cpp  stringmanip.hpp  types.hpp  util_public.hpp  vec.hpp  voxelarray.cpp  voxelarray.hpp  voxelio.cpp  voxelio.pro
.github/workflows/: c-cpp.yml  linux.yml  msbuild.yml  windows.yml
format/: cubeworld.cpp  cubeworld.hpp  qb.hpp  qef.cpp  qef.hpp  vl32.cpp  vox.cpp
include/voxelio/: assert.hpp  bitcount.hpp  bits.hpp  bufstream.hpp  build.hpp  builtin.hpp  color.hpp  cstringview.hpp  deflate.hpp  endian.hpp  filetype.hpp  fstream.hpp  hextree_.hpp  ileave.hpp  image.hpp  intdiv.hpp  intlog.hpp  ioutil.hpp  langext.hpp  log.hpp  palette.hpp  parse.hpp  primitives.hpp  results.hpp  sstreamwrap.hpp  stream.hpp  streamfwd.hpp  stringify.hpp  stringmanip.hpp  types.hpp  util.hpp  vec.hpp  voxelarray.hpp  voxelio.hpp  x.hpp
include/voxelio/format/: binvox.hpp  cubeworld.hpp  ply.hpp  png.hpp  qb.hpp  qbt.hpp  qef.hpp  svx.hpp  vl32.hpp  vobj.hpp  vox.hpp  xyzrgb.hpp
include/voxelio/test/: io.hpp  random.hpp  test.hpp  voxels.hpp
src/: CMakeLists.txt  assert.cpp  assert.hpp  bits.hpp  build.hpp  builtin.cpp  builtin.hpp  color.hpp  constants.hpp  constantsfwd.hpp  deflate.cpp  deflate.hpp  endian.hpp  filetype.cpp  filetype.hpp  hextree_.cpp  ileave.hpp  image.cpp  image.hpp  intdiv.hpp  intlog.hpp  ioutil.cpp  ioutil.hpp  log.cpp  log.hpp  log2.hpp  macro.hpp  palette.cpp  palette.hpp  primitives.hpp  results.hpp  sstreamwrap.cpp  sstreamwrap.hpp  stream.cpp  stream.hpp  stringify.cpp  stringify.hpp  stringmanip.cpp  stringmanip.hpp  types.hpp  (+10 more)
src/format/: CMakeLists.txt  binvox.cpp  binvox.hpp  cubeworld.cpp  cubeworld.hpp  ply.cpp  png.cpp  png.hpp  qb.cpp  qb.hpp  qbt.hpp  qef.cpp  qef.hpp  svx.cpp  svx.hpp  vl32.cpp  vl32.hpp  vobj.cpp  vobj.hpp  vox.cpp  vox.hpp  xyzrgb.cpp
test/: CMakeLists.txt  io.cpp  main.cpp  test.cpp  test_assert.cpp  test_binvox.cpp  test_bits.cpp  test_bufstream.cpp  test_color.cpp  test_deflate.cpp  test_hextree.cpp  test_intdiv.cpp  test_palette.cpp  test_qubicle.cpp  test_stream.cpp  test_stringmanip.cpp  test_vl32.cpp  test_vox.cpp  voxels.cpp
test/assets/: debug.qb  debug.qef  debug.vl32  debug.vox  waifu.jpg.zlib
